--- a/templates/changelog.txt
+++ b/templates/changelog.txt
@@ -1,5 +1,5 @@
 {% for ch in changes -%}
-{{ ch.package }} ({{ ch.version|d("?", true) }}) {{ ch.branch }}; urgency={{ch.urgency}}
+{{ ch.package }} ({{ ch.version|d("?", true) }}) {{ ch.tree }}/{{ ch.branch }}; urgency={{ch.urgency}}
 
   [{{ ch.githash|cut(10) }}] {{ ch.message|get_first_line|fill(78,"  ") }}
 
